<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.first_second.gui.MainActivity">
    <item
        android:id="@+id/action_receiveViaBluetooth"
        android:orderInCategory="100"
        android:title="Receive via Bluetooth"
        android:icon="@drawable/baseline_bluetooth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAll"
        android:orderInCategory="100"
        android:title="Delete All"
        app:showAsAction="never" />
</menu>